--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Portfolio</title>
+  <title>Wallen's</title>
   <base href="/">
   <meta name="robots" content="all,follow">
 
@@ -31,7 +31,6 @@
   <script src="assets/vendor/lightbox2/js/lightbox.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/1.4.0/leaflet.js"> </script>
   <script src="assets/js/front.js"></script>
-  <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
   <app-root></app-root>
